--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "version": 2,
+  "devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
   "builds": [
     {
       "src": "root/main.py",
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": "root/(.*)",
+      "src": "/(.*)",
       "dest": "root/main.py"
     }
   ]
